move margin to column to prevent toc shifting down on mobile

--- a/src/scss/components/_digest.scss
+++ b/src/scss/components/_digest.scss
@@ -1,6 +1,5 @@
 .digest {
   border-left: 1px solid $gray-light;
-  margin-bottom: 2rem;
 }
 
 .digest__title {
